# mouse-click-service

./: README.md  mouse_click_service.py  mouse_click_service.spec  pyproject.toml
